--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
-  <title>Nirnay K</title>
+  <title>Tharun M S</title>
   
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.png">
   
@@ -95,24 +95,24 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img-place wow zoomIn">
-              <img src="assets/img/Nkp2.jpg" alt="Photo Profile">
+              <img src="assets/img/Tharun profile.jpg" alt="Photo Profile">
             </div>
           </div>
           <div class="col-md-6">
             <div class="caption wow fadeInRight">
-              <h2 class="fg-dark">Nirnay K</h2>
+              <h2 class="fg-dark">Tharun M S</h2>
               <p class="fg-theme fw-medium">Enthusiastic Engineer</p>
               <p>Securing a responsible career
 					opportunity to fully utilize my skills,
 					while making a significant
 					contribution to the success of the company.</p>
               <ul class="theme-list">
-                <li class="fg-dark"><b>From:</b> Chitradurga, karnataka</li>
-                <li class="fg-dark"><b>Lives In:</b> Tumkur, karnataka</li>
+                <li class="fg-dark"><b>From:</b> Tumkur, Karnataka</li>
+                <li class="fg-dark"><b>Lives In:</b> Tumkur, Karnataka</li>
                 <li class="fg-dark"><b>Age:</b> 20</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
               </ul>
-              <button onclick="location.href='assets/Raviteja S Resume.pdf'" class="btn btn-theme btn-rounded">Download CV</button>
+              <button onclick="location.href='assets/Tharun resume.pdf'" class="btn btn-theme btn-rounded">Download CV</button>
             </div>
           </div>
         </div>
@@ -204,7 +204,7 @@
                 <div class="details">
                   <h5>PUC</h5>
                   <small class="fg-theme">DEPARTMENT OF PRE-UNIVERSITY EDUCATION</small>
-                  <p>College - Vidyavahini PU college.<br> Stream - PCMC</p>
+                  <p>College - Jawahar Navodaya vidyalaya PU college.<br> Stream - PCMC</p>
                 </div>
               </li>
               <li>
@@ -212,7 +212,7 @@
                 <div class="details">
                   <h5>SSLC</h5>
                   <small class="fg-theme">KARNATAKA STATE SECONDARY EDUCATION EXAMINATION BOARD (KSEEB)</small>
-                  <p>School - Sri Siddalingeshwara Residential High School.</p>
+                  <p>School - Jawahar Navodaya vidyalaya residential high school.</p>
                 </div>
               </li>
             </ul>
