--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="vg-page page-home" id="home" style="background-image: url(assets/img/bg_image_2.jpg);">
       <div class="caption wow zoomInUp">
         <h1 class="fw-normal">Welcome</h1>
-        <h2 class="fw-medium fg-theme">I'm Nirnay K</h2>
+        <h2 class="fw-medium fg-theme">I'm Tharun M S</h2>
         <p class="tagline">Second Year ISE Student</p>
       </div>
     </div>
@@ -109,7 +109,7 @@
               <ul class="theme-list">
                 <li class="fg-dark"><b>From:</b> Tumkur, Karnataka</li>
                 <li class="fg-dark"><b>Lives In:</b> Tumkur, Karnataka</li>
-                <li class="fg-dark"><b>Age:</b> 20</li>
+                <li class="fg-dark"><b>Age:</b> 19</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
               </ul>
               <button onclick="location.href='assets/Tharun resume.pdf'" class="btn btn-theme btn-rounded">Download CV</button>
@@ -234,7 +234,7 @@
               </div>
               <h4 class="fg-theme">OpenCV</h4>
               <p>Face recognition system for taking attendance.</p>
-              <a href="https://github.com/ravitejasravi" class="btn btn-theme btn-rounded">Github</a>
+              <a href="https://github.com/tharun7git" class="btn btn-theme btn-rounded">Github</a>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 wow fadeInUp">
@@ -244,7 +244,7 @@
               </div>
               <h4 class="fg-theme">Docker</h4>
               <p>Application containerization</p>
-              <a href="https://github.com/ravitejasravi" class="btn btn-theme btn-rounded">GitHub</a>
+              <a href="https://github.com/tharun7git" class="btn btn-theme btn-rounded">GitHub</a>
             </div>
           </div>
           
@@ -256,7 +256,7 @@
               </div>
               <h4 class="fg-theme">MySQL</h4>
               <p> library management system</p>
-              <a href="https://github.com/ravitejasravi" class="btn btn-theme btn-rounded">GitHub</a>
+              <a href="https://github.com/tharun7git" class="btn btn-theme btn-rounded">GitHub</a>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 wow fadeInUp">
@@ -266,7 +266,7 @@
               </div>
               <h4 class="fg-theme">Flask Web Framework</h4>
               <p>yaml to json to xml converter</p>
-              <a href="https://github.com/ravitejasravi" class="btn btn-theme btn-rounded">GitHub</a>
+              <a href="https://github.com/tharun7git" class="btn btn-theme btn-rounded">GitHub</a>
             </div>
           </div>
         </div>
