--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="img-place wow zoomIn">
-              <img src="assets/img/Tharun profile.jpg" alt="Photo Profile">
+              <img src="assets/img/Tharun dp.jpg" alt="Photo Profile">
             </div>
           </div>
           <div class="col-md-6">
