--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <li class="fg-dark"><b>Age:</b> 19</li>
                 <li class="fg-dark"><b>Gender:</b> Male</li>
               </ul>
-              <button onclick="location.href='assets/Tharun resume.pdf'" class="btn btn-theme btn-rounded">Download CV</button>
+              <button onclick="location.href='assets/Tharun7 resume.pdf'" class="btn btn-theme btn-rounded">Download CV</button>
             </div>
           </div>
         </div>
