--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <div class="title">2018 - 2019</div>
                 <div class="details">
                   <h5>SSLC</h5>
-                  <small class="fg-theme">KARNATAKA STATE SECONDARY EDUCATION EXAMINATION BOARD (KSEEB)</small>
+                  <small class="fg-theme">CENTRAL BOARD OF SECONDARY EDUCATION (CBSE)</small>
                   <p>School - Jawahar Navodaya vidyalaya residential high school.</p>
                 </div>
               </li>
