--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     </div> <!-- End page contact -->
     
     <div class="col-12">
-            <p class="text-center mb-0 mt-4"> &copy;Copyright Nirnay K. All right reserved</p>
+            <p class="text-center mb-0 mt-4"> &copy;Copyright Tharun M S. All right reserved</p>
           </div>
   </div> <!-- End main wrapper -->
   
